--- a/web/index.html
+++ b/web/index.html
@@ -3,10 +3,14 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Cupboard</title>
+	<style>
+		body, html{
+			margin: 0;
+			padding: 0;
+		}
+	</style>
 </head>
 <body>
-	Hello
-
 	<script src="/js.js"></script>
 </body>
 </html>
