Внёс кучку изменений.

--- a/web/index.html
+++ b/web/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Cupboard</title>
-    <style>
-        body, html {
-            margin: 0;
-            padding: 0;
-        }
-    </style>
+    <link rel="stylesheet" href="/css.css">
 </head>
 <body>
-<script src="/assets/js.js"></script>
+    <script src="/assets/js.js"></script>
+    <div class="cupboard">
+        <h2>Шкаф</h2>
+        Ширина: <input type="text" class="x"><br/>
+        Высота: <input type="text" class="y"><br/>
+        Глубина: <input type="text" class="z"><br/>
+    </div>
 </body>
 </html>
