--- a/web/index.html
+++ b/web/index.html
@@ -3,15 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Cupboard</title>
-    <link rel="stylesheet" href="/css.css">
+    <link rel="stylesheet" href="/assets/css.css">
 </head>
 <body>
     <script src="/assets/js.js"></script>
-    <div class="cupboard">
-        <h2>Шкаф</h2>
-        Ширина: <input type="text" class="x"><br/>
-        Высота: <input type="text" class="y"><br/>
-        Глубина: <input type="text" class="z"><br/>
-    </div>
+    <div class="output"></div>
 </body>
 </html>
