Продолжил развивать идею реакций 3.

--- a/web/index.html
+++ b/web/index.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="/assets/css.css">
 </head>
 <body>
-    <script src="/assets/js.js"></script>
+    <script src="/assets/vendor.bundle.js"></script>
+    <script src="/assets/cupboard.bundle.js"></script>
     <div class="output"></div>
 </body>
 </html>
